Reject descendant symlinks in local ACL paths